WIP try smth else

--- a/index.html
+++ b/index.html
@@ -1,23 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>Snake Game</h1>
-    <div class="game-container">
-        <div id="score">1</div>
-        <canvas id="gameCanvas" width="972" height="972"></canvas>
-        <div class="controls">
-            <button id="up" class="arrow-btn">▲</button>
-            <button id="left" class="arrow-btn">◀</button>
-            <button id="down" class="arrow-btn">▼</button>
-            <button id="right" class="arrow-btn">▶</button>
-        </div>
-    </div>
-    <script src="game.js"></script>
-</body>
-</html>
+TODO: Taras Petruk's personal page
